# SkillTrace

./: README.md  pyproject.toml
examples/minimal/anchor/: SKILL.md
examples/minimal/candidate/: SKILL.md
scripts/: run_demo.py
src/skilltrace_core/: __init__.py  attacks.py  audit.py  baselines.py  calibration.py  evaluation.py  parser.py  similarity.py  traces.py
tests/: test_core.py
